2006-09-01 [paul]	2.4.0cvs120

	* src/folderview.c
	* src/folderview.h
	* src/imap.c
	* src/mainwindow.c
	* src/summaryview.c
		obey the 'When entering folder...' option
		when using the /View/Go to/... menu items
		Thanks to Colin

2006-08-31 [colin]	2.4.0cvs119

	* src/folderview.c
		Revert 2.4.0cvs116, wrong fix.

2006-08-31 [colin]	2.4.0cvs118

	* src/gtk/gtksctree.c
		Better state the various copyrights

2006-08-31 [colin]	2.4.0cvs117

	* src/prefs_common.c
		fix enable_dotted_lines

2006-08-31 [colin]	2.4.0cvs116

	* src/folderview.c
		Use pref "Always open on select" when going
		to next unread folder
	* src/gtk/gtksctree.c
		Fix link failure to _gtk_clist_create_cell_layout
		on certain computers. (Why not mine, I wonder)

2006-08-31 [colin]	2.4.0cvs115

	* src/procmsg.c
	* src/textview.c
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/spamassassin/spamassassin.c
		Requalify some "errors" to warnings
	* src/mainwindow.c
	* src/mainwindow.h
	* src/statusbar.c
		Add an icon in the statusbar to notify
		of errors
	* src/gtk/gtksctree.c
	* src/folderview.c
	* src/summaryview.c
		Make the GtkSCTree look more modern by
		alternating background lines
	* src/prefs_common.c
	* src/prefs_common.h
		Add a pref to let people have the old
		way if they prefer


2006-08-30 [colin]	2.4.0cvs114

	* src/procmsg.c
	* src/procmsg.h
		Provide a way to filter a list of
		messages in an optimised manner, and
		add a list-filtering hook
	* src/folder.c
	* src/inc.c
	* src/mbox.c
		Use the list filtering
	* src/plugins/bogofilter/bogofilter.c
		Use the list-filtering hook
		Use -b (bulk) mode for more speed
		when learning and filtering
	* src/etpan/imap-thread.c
		Make log output shorter in UID SEARCH


2006-08-30 [colin]	2.4.0cvs113

	* src/plugins/bogofilter/bogofilter.c
		Really fast mass learning - thanks to David
		Relson for the options explanations :)

2006-08-30 [colin]	2.4.0cvs112

	* src/msgcache.c
		Fix compilation on FreeBSD. Thanks
		to Michael Hugues
