@@ -1,3 +1,8 @@
+2006-09-01 [mones]	2.4.0cvs121
+
+	* manual/advanced.xml
+		Document enable_dotted_lines
+
 2006-09-01 [paul]	2.4.0cvs120
 
 	* src/folderview.c
